[package]
name = "q_compress"
version = "0.4.1"
edition = "2018"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding"]
description = "Good data compression for numerical sequences"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["compression", "numerical", "quantile"]
license = "Apache-2.0"
repository = "https://github.com/mwlon/quantile-compression"

[dependencies]

[dev-dependencies]
rand = "0.8.4"

[[example]]
name="primary"
path="examples/primary.rs"

[[example]]
name="fast_seeking"
path="examples/fast_seeking.rs"
