[workspace]
resolver = "2"

members = [
  "better_io",
  "pco",
  "pco_c",
  "pco_cli",
  "pco_python",
  "quantile-compression/ffi",
  "quantile-compression/q_compress", "spdp-sys",
  "spdp-sys",
]

exclude = [
  # conflicting dependencies and not worth upgrading
  "quantile-compression/q_compress_cli"
]
