[package]
name = "bench"
version = "0.0.0"
edition = "2018"
publish = false

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
bytes = "1.1.0"
clap = {version = "4.3.11", features = ["derive"]}
parquet = {path = "../../arrow-rs/parquet", version = "44.0.0", features = ["snap", "zstd"], default-features=false}
pco = {path = "../pco" }
q_compress = {path = "../quantile-compression/q_compress" }
snap = "1.1.0"
tabled = "0.12.2"
zstd = "0.12"
