[package]
name = "pco"
version = "0.1.1"
edition = "2021"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding"]
description = "Good compression for numerical sequences"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "delta"]
license = "Apache-2.0"
repository = "https://github.com/mwlon/pcodec"

[dependencies]
better_io = {version = "0.0.0", path = "../better_io"}
rand_xoshiro = {version = "0.6.0"}

[dev-dependencies]
futures = "0.3.21"
rand = "0.8.4"
tokio = {version = "1.19.2", features = ["full"]}
