[package]
name = "pco"
version = "0.3.0"
edition = "2021"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding"]
description = "Good compression for numerical sequences"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "delta"]
license = "Apache-2.0"
repository = "https://github.com/mwlon/pcodec"
rust-version = "1.73.0"

[dependencies]
better_io = { version = "0.1.0", path = "../better_io" }
half = { version = "2.4.1", features = ["std"] }
rand_xoshiro = { version = "0.6.0" }

[dev-dependencies]
futures = "0.3.21"
rand = "0.8.4"
tokio = { version = "1.19.2", features = ["full"] }
