[package]
name = "pco_cli"
version = "0.1.0"
edition = "2021"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding", "command-line-utilities"]
description = "compresses, inspects, and decompres pco data"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "delta"]
license = "Apache-2.0"
repository = "https://github.com/mwlon/pcodec"

[[bin]]
name = "pcodec"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
arrow = { version = "49.0.0", features = ["csv"], default-features = false }
arrow-buffer = "49.0.0"
better_io = { version = "0.0.1", path = "../better_io" }
blosc-src = { version = "0.3", features = ["zstd"], optional = true }
bytes = "1.1.0"
clap = { version = "4.5.3", features = ["derive"] }
indicatif = "0.17.8"
parquet = { version = "49.0.0", features = ["arrow", "base64", "snap", "zstd"], default-features = false }
pco = { version = "0.2", path = "../pco" }
q_compress = { path = "../quantile-compression/q_compress", optional = true }
snap = "1.1.0"
toml = "0.8.12"
tabled = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
zstd = "0.13"

[features]
full_bench = ["q_compress", "blosc-src"]
