[package]
name = "pco_python"
version = "0.3.2"
edition = "2021"
publish = false

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pcodec"
crate-type = ["cdylib"]

[dependencies]
half = { version = "2.0.0", features = ["std"] }
numpy = { version = "0.22.0", features = ["half"] }
pco = { version = "0.4.0", path = "../pco" }
pyo3 = { version = "0.22.5", features = ["extension-module"] }
