[project]
authors = [
  {name = "mwlon", email = "m.w.loncaric@gmail.com"}
]
description = "Good compression for numerical sequences"
dependencies = [
  "numpy",
]
dynamic = ["version"]
keywords = ["compression", "numerical"]
license = "Apache-2.0"
name = "pcodec"
readme = "README.md"

[project.urls]
Repository = "https://github.com/mwlon/pcodec"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]