[package]
name = "q_compress"
version = "0.8.0"
edition = "2018"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding"]
description = "Good data compression columnar numerical data and time series"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "quantile", "delta"]
license = "Apache-2.0"
repository = "https://github.com/mwlon/quantile-compression"

[dependencies]

[dev-dependencies]
rand = "0.8.4"
zstd = "0.10"

[[example]]
name="primary"
path="examples/primary.rs"

[[example]]
name="fast_seeking"
path="examples/fast_seeking.rs"

[[example]]
name="compatibility_test_case_generator"
path="examples/compatibility_test_case_generator.rs"

[[example]]
name="compare_zstd"
path="examples/compare_zstd.rs"
