[package]
name = "q_compress_cli"
version = "0.0.0"
edition = "2018"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding", "command-line-utilities"]
description = "CLI for q_compress and .qco format"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "quantile", "delta"]
license = "Apache-2.0"
repository = "https://github.com/mwlon/quantile-compression"

[dependencies]
anyhow = "1.0.53"
structopt = "0.3.26"
q_compress = {path="../q_compress"}
