[package]
name = "q_compress_cli"
version = "0.10.2"
edition = "2018"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding", "command-line-utilities"]
description = "CLI for q_compress and .qco format"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["compression", "numerical", "quantile", "delta"]
license = "Apache-2.0"
repository = "https://github.com/mwlon/quantile-compression"

[[bin]]
name = "qcompress"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.53"
arrow = {version = "9.0.2", features = ["csv"], default-features=false}
parquet = {version = "9.0.2", features = ["arrow", "base64", "snap", "zstd"], default-features=false}
structopt = "0.3.26"
q_compress = {version = "0.10", path = "../q_compress"}

[dev-dependencies]
enum-iterator = "0.7.0"
